--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-i18next": "^8.1.0",
     "@types/react-world-flags": "^1.6.0",
     "@vitejs/plugin-react": "^4.5.2",
+    "gh-pages": "^6.3.0",
     "globals": "^16.2.0",
     "sass": "^1.89.2",
     "scss": "^0.2.4",
